[package]
name = "ghost_hook"
version = "0.1.0"
edition = "2021"
description = "Ephemeral polymorphic eBPF defense skeleton"

[dependencies]
aya = { version = "0.11", features = ["async_tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
bytes = "1.5"
nix = { version = "0.27", features = ["process", "mman", "fs"] }
libc = "0.2"
